# pipe-without-vital

./: CMakeLists.txt  README.md  setup_example.sh.in
pipeline/: sender-receiver.pipe.in
python/: CMakeLists.txt  receiver.py  sender.py  type.py
